...
        }),
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: "Timeline",
          tabBarIcon: ({ color }) => (
            <TabBarIcon name="clock-o" color={color} />
          ),
          ...(Platform.OS === "ios"
            ? {
                headerTitle: "Timeline",
...
          ),
        }}
      />
      <Tabs.Screen
        name="groups"
        options={{
          title: "Groups",
          tabBarIcon: ({ color }) => (
            <TabBarIcon name="university" color={color} />
          ),
          ...(Platform.OS === "ios"
            ? {
                headerTitle: "Groups",
...
              }),
        }}
      />
      <Tabs.Screen
        name="jobs"
        options={{
          title: "Jobs",
          tabBarIcon: ({ color }) => (
            <TabBarIcon name="briefcase" color={color} />
          ),
          ...(Platform.OS === "ios"
            ? {
                headerTitle: "Jobs",
...
              }),
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: "Profile",
          tabBarIcon: ({ color }) => (
            <TabBarIcon name="user-circle" color={color} />
          ),
          ...(Platform.OS === "ios"
            ? {
                headerTitle: "Profile",
...
